src/theme/global.scss
/* ... */
ion-button{
  &[size="large"]{
    height: 2.8rem;
    font-size: 1.2rem;
  }
  &[size="medium"]{
    height: 2.5rem;
    font-size: 1rem;
  }
  min-height: 1.7rem;
  height: 1.7rem;
  margin:0;
  font-size: 13px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 0;
  --box-shadow:none;
  --border-radius: 1.2em;

  &.expanded {
    flex-grow: 1;
  }

  &.round{
    --padding-start: 0;
    --padding-end: 0;
    width:27px;
    font-size: 17px;

    span.ellipsis{
      padding-top: 0;
      padding-bottom: .4em;
      line-height: 0;
    }
  }

  & + ion-button:not(.button-block) {
    margin-left: .5rem;
  }

  & + ion-button.button-block {
    margin-top: 1rem;
  }

  span {
    padding-top: .2em;
  }
}

ion-range.progress-indicator{
  padding: 0;
  margin: 1rem;
  --knob-size:0;
  --knob-background:transparent;
  --knob-box-shadow: none;
  --bar-height:10px;
  --bar-border-radius:5px;
  overflow: hidden;
  border-radius: 1rem;

  &::part(bar){
    background: var(--ion-color-contrast);
  }

  &::part(bar-active){
    background: var(--ion-color-inria-spe);
  }

  &::part(tick), &::part(tick-active){
    top: calc((var(--height) - var(--bar-height) + 4px) / 2);
    width: calc(var(--bar-height) - 4px);
    height: calc(var(--bar-height) - 4px);
    border-radius: 50%;
    background: #D0D7E1;
    transform: translateX(calc(-100% - 4px));
  }

  &::part(tick-active){
    background: white;
  }

  &::part(knob){
    display: none;
  }
}

.spin{
  animation: spin 2s infinite linear;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(359deg); }
}

// hide back button text on android
.sc-ion-back-button-md{
  display: none;
}

.custom-action-sheet{
  .action-sheet-wrapper{
    margin-bottom:0;
  }
  .action-sheet-container{
    padding: 0;
  }
  .action-sheet-group{
    margin-bottom: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    background: var(--ion-color-content);

    &:last-child{
      margin-bottom: 0;
      padding-bottom: var(--ion-safe-area-bottom);
    }
  }
  .action-sheet-title{
    &::before {
      content: '';
      display: block;
      float:left;
      margin-right: .5rem;
      width: 3rem;
      height: 3rem;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
      background-image: var(--thumbnail-url);
    }

    padding: 1rem;
    font-size: 1.1rem;
    font-weight: bold;
    color: var(--ion-color-text);
    background: none;
    text-align: left;
  }

  &.import-action-sheet .action-sheet-title{
    &::before {
      display: none;
    }
  }
  .action-sheet-sub-title{
    padding: 0;
    font-size: 0.875rem;
    font-weight: bold;
    color: var(--ion-color-specs);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .action-sheet-button{
    margin: 0 1rem .5rem 1rem;
    width: calc(100% - 2rem);
    background: var(--ion-color-contrast);
    border-radius: .5rem;
  }
  .action-sheet-button-inner{
    justify-content: left;
    color: var(--ion-color-text);
  }

  .action-sheet-icon{
    font-size: 1.4rem!important;
    margin-right: 1rem !important;
    color: var(--ion-color-icon-2);
  }

  .action-sheet-group-cancel{
    border-radius: 0;
    .action-sheet-button{
      padding: 0;
      margin-top: 1rem;
      height: 3rem;
      border-radius: 2rem;
      border: 1px solid var(--ion-color-inria);
    }
    .action-sheet-button-inner{
      padding-top: .2em;
      justify-content: center;
      background: var(--ion-color-fill-button);
      color: var(--ion-color-icon-2);
    }
  }

  &.dropdown-list{
    .action-sheet-group:not(.action-sheet-group-cancel) {
      .action-sheet-button{
        height:auto;
        contain: content;
      }
    }
  }

  .separator{
    display: flex;
    background: var(--ion-color-background);
    justify-content: center;
    align-items: center;
    gap: .5rem;
    padding: 0;

    &:after, &:before {
      content: '';
      position: relative;
      top:auto;
      left:auto;
      right: auto;
      display: block;
      width: 100%;
      height: 1px;
      background: var(--ion-color-specs);
      opacity: 0.5;
    }

    span {
      display: block;
      width: auto;
      flex-shrink: 1;
      text-align: center;
      color: var(--ion-color-specs);
      font-size: 0.875rem;
    }
  }
}

ion-toast.badge-toast {
  --border-radius: var(--epoc-border-radius);
  --background: var(--ion-color-content);
  --box-shadow: 0 6px 14px 0 var(--ion-color-shadow);
  --color: var(--ion-color-text);

  &::part(header) {
    color: var(--ion-color-inria);
    font-weight: bold;
  }

  &::part(message) {
    color: var(--ion-color-text);
  }

  &::part(icon) {
    position: relative;
    background: var(--ion-color-inria-base-button) url('/assets/icon/badge/shape.svg');
    background-size: 40px 44px;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 5px;
    width: 16px;
    height: 16px;
    margin: .8rem 0 .8rem .8rem;
    padding: 20px 22px 24px 22px;

    &:before {
      content:'';
      position: absolute;
      width: 40px;
      height:44px;
      top: 8px;
      left: 10px;
      background: url('/assets/icon/badge/shadow.svg');
      background-size: cover;
    }
  }
}

.ion-page {
  background: var(--ion-color-background);
}

.bold{
  font-weight: 700;
}

.semibold{
  font-weight: 600;
}

// Hot fix scroll flicker
video {
  transform: translateZ(0);
}
.ios video{
  transform: none;
}
/* ... */

